# meganz-account-generator

./: Cargo.toml  README.md  readme.md
examples/: cli.rs
src/: account.rs  errors.rs  generator.rs  lib.rs  random.rs
