[package]
name = "meganz-account-generator"
version = "0.3.3"
edition = "2024"
description = "Automated MEGA.nz account generator using temporary email"
license = "GPL-2.0-or-later"
repository = "https://github.com/11philip22/meganz-account-generator"
keywords = ["mega", "meganz", "account-generator", "automation", "email"]
categories = ["api-bindings", "authentication", "command-line-utilities"]

[dependencies]
# MEGA client
megalib = "0.5.0"

# Temporary email
guerrillamail-client = "0.5.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI (for example only)
clap = { version = "4", features = ["derive"] }

# Utilities
regex = "1"
rand = "0.8"
thiserror = "1"

[[example]]
name = "cli"
path = "examples/cli.rs"

